--- a/gorabbitmq/pom.xml
+++ b/gorabbitmq/pom.xml
@@ -20,11 +20,9 @@
       <version>2.8.7</version>
     </dependency>
     <dependency>
-      <groupId>com.linkedin.helix</groupId>
+      <groupId>org.apache.helix</groupId>
       <artifactId>helix-core</artifactId>
-      <version>0.5.28</version>
-      <scope>system</scope>
-      <systemPath>${PWD}/lib/helix-core-0.5.28.jar</systemPath>
+      <version>0.7.1</version>
     </dependency>
     <dependency>
       <groupId>com.github.sgroschupf</groupId>
@@ -32,4 +30,28 @@
       <version>0.1</version>
     </dependency>
   </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>2.3</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <configuration>
+              <transformers>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <mainClass>com.mohankri.rabbitmq.ZkConsumer</mainClass>
+                </transformer>
+              </transformers>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
